Change yml file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,7 @@
-- name: Deploy to Azure Web App
+steps:
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'healthfrontend' # Your NEW Blazor web app name
-          publish-profile: ${{ secrets.AZURE_WEB_PUBLISH_PROFILE }} # The NEW secret
+          app-name: 'healthfrontend'
+          publish-profile: ${{ secrets.AZURE_WEB_PUBLISH_PROFILE }}
           package: ./publish
